update app.html file

--- a/app.html
+++ b/app.html
@@ -1,1 +1,2 @@
 this was dedicated for html but txt but we need to make this new way to access the file to the web
+we hope we need this way to be now we want them to be
