modify home page more

--- a/home.html
+++ b/home.html
@@ -2,5 +2,5 @@ this home page done after git-copy
 now this home file is belong to footer 
 woww what amaze
 
-
+we never know what new change to merge inn case of needy
 what a f**k more change !!!
